--- a/public/styles.css
+++ b/public/styles.css
@@ -41,7 +41,7 @@ margin: auto;
   
   .container{
     width : 100%;
-    height : 100vh;
+    height : 120vh;
     background-image: url(./images/background.jpg);
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url('./images/background.jpg');
@@ -59,52 +59,50 @@ box-sizing: border-box;
     }
     .logo{
         margin-top: 40px;
-        width:140px;
+        width:10%;
         cursor:pointer;
+        
     }
     nav{
 flex:1;
 text-align:right;
-
+margin-bottom:10%;
+margin-top:10%;
     }
     nav ul li{
 list-style:none;
 display:inline-block;
-margin-left: 100px;
+margin-left: 100%;
     }
-    nav ul li a{
-        text-decoration: none;
-        color:white;
-        font-size: 23px;
-
-    }
+   
     .row
     {
         display:flex;
         height: 88%;
-        align-items: center;
+        align-items: top;
     }
     .col{
         flex-basis: 50%;
     }
     h1{
         color:aliceblue;
-        font-size: 100px;
+        font-size: 10vh;
     }
     .mainpara{
-        font-size: 25px;
+        font-size: 2vh;
         color:grey;
     }
-    button{
-        width:200px;
+    .modebutton{
+        width:100%;
         font-size: 20px;
         font-weight: bold;
-        padding: 12px 0;
-        background: white;
+        padding: 12px 10px;
+        background: rgb(255, 255, 255);
         border:0;
-        border-radius: 20px;
+        border-radius: 20%;
         outline: none;
-        margin-top:30px;
+        margin-top:70%;
+        margin-bottom:10px;
         box-shadow: 10px 10px;
         transition:0.5s;
         
@@ -114,14 +112,16 @@ margin-left: 100px;
 
     }
     .block{
-        width:250px;
-        height:200px;
+
+        width:30%;
+        height:17%;
         display:inline-block;
         border-radius: 10px;
-        padding: 15px 25px;
+       /* padding: 15px 25px;*/
+       padding:1% 1%;
         box-sizing: border-box;
         cursor:pointer;
-        margin:50px 50px;
+        margin:5%;
      /* background-image:url(./images/skull.png);
       /*
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -130,13 +130,16 @@ margin-left: 100px;
         background-position: center;
         background-size: cover;
         transition: transform 0.5s;
-        position: relative; 
+        position: sticky;
     }
     
     .img{
-        width:230px;
-        height:200px;
+        width:125%;
+        height:125%;
         border-radius: 10px;
+        align-content: end;
+        transition: transform 1s;
+
     }
     .block:hover{
         transform:scale(1.3);
@@ -157,24 +160,32 @@ margin-left: 100px;
        
     }
     */
-    h4,
-    .content {
-        position: absolute;
-        font-weight: bolder;
-    }
+    
     
     h4 {
-        top: 10px; /* Adjust top to position h4 properly */
-        left:30px; /* Adjust left to position h4 properly */
+        top: 5%; /* Adjust top to position h4 properly */
+        left:30px;
+        font-weight: bolder;
+        position: absolute;
+        /* Adjust left to position h4 properly */
     }
     
     .content {
         top: 50px; /* Adjust top to position .content properly */
         left: 30px; /* Adjust left to position .content properly */
-        margin-top: 0; /* Remove margin-top */
+        margin-top: 0;
+        position: absolute;
+        font-size: 1.4vh;
+        /* Remove margin-top */
+    }
+    .like{
+        border-radius: 20px;
+        background: linear-gradient(red,pink);
+
     }
     
   /*
+  
   .footer{
     background-color:#333;
     margin-bottom:0px;
@@ -272,6 +283,17 @@ margin-left: 100px;
   transform: rotateY(180deg);
 }
 */
-.block.rotated {
+.rotate {
     transform: rotateY(180deg);
+  }
+  .favlist{
+    color: rgb(220, 56, 56);
+    font-size: 1.7vh;
+  }
+  .dark-mode .container {
+    background: none;
+  }
+  
+  .dark-mode h1 {
+    color: black;
   }
