--- a/public/styles.css
+++ b/public/styles.css
@@ -5,22 +5,7 @@
 
 
 
-/*
 
-* {
-    box-sizing: border-box;
-  }
- h1{
-margin: auto;
- }
- 
- 
-  body {
-    margin: 0;
-    font-family: sans-serif;
-    background: linear-gradient(hsl(190, 17%, 86%), hsl(152, 83%, 53%), hsl(122, 81%, 60%));;
-  }
-   */
    
   .header {
     background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 93%, 89%));
@@ -151,143 +136,35 @@ margin-left: 100%;
     .block .img:hover{
         filter: blur(5px);
     }
-    /*
-    h4 ,.content{
-        margin-top: -170px;
-        margin-left: 100px;
-        position: absolute;
-        font-weight:bolder;
-       
-    }
-    */
-    
+   
     
     h4 {
-        top: 5%; /* Adjust top to position h4 properly */
+        top: 5%; 
         left:30px;
         font-weight: bolder;
         position: absolute;
-        /* Adjust left to position h4 properly */
+        
     }
     
     .content {
-        top: 50px; /* Adjust top to position .content properly */
-        left: 30px; /* Adjust left to position .content properly */
+        top: 50px; 
+        left: 30px; 
         margin-top: 0;
         position: absolute;
         font-size: 1.4vh;
-        /* Remove margin-top */
+      
     }
     .like{
         border-radius: 20px;
         background: linear-gradient(red,pink);
 
     }
-    
-  /*
-  
-  .footer{
-    background-color:#333;
-    margin-bottom:0px;
-  }
-  .footer-text{
-    color:white;
-    text-align: center;
-  }
-  
-  .gallery {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 60px;
-    max-width: 1400px;
-    margin: 0px auto;
-    margin-top:100px;
-    padding: 20px 10px;
-    z-index: 0;
-
-  }
-  
-  .gallery img {
-    width: 100%;
-    max-width: 350px;
-    height: 300px;
-    object-fit: cover;
-
-  }
-  
-  .gallery::after {
-    content: "";
-    width: 350px;
-  }
-
-
-
-
-.image-container {
-  margin-top:50px;
-  position: relative;
-  cursor: pointer;
-  transition: transform 0.5s ease;
-  box-shadow: 0 0 20px 0 rgb(129, 129, 129);
-  border-radius: 10px;
-
-}
-
-.image-container img {
-  width: 100%;
-  max-width: 350px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 10px;
-  opacity: 1;
-}
-
-.image-container:hover .image-overlay {
-  opacity: 0;
-}
-
-.image-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  opacity: 0.2;
-  transition: opacity 0.3s ease;
-}
-
-.overlay-text {
-  color: white;
-  font-size: 18px;
-  text-align: center;
-}
-.image-overlay.rotate{
-  transform: rotateY(180deg);
-
-}
-.image-container.rotate {
-  transform: rotateY(180deg);
-  transition: transform 3s ease;
-}
-.image-container.rotated {
-  transform: rotateY(180deg);
-}
-*/
+ 
 .rotate {
     transform: rotateY(180deg);
   }
   .favlist{
-    color: rgb(220, 56, 56);
+    color: rgb(143, 143, 143);
     font-size: 1.7vh;
   }
   .dark-mode .container {
